--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,10 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
+BASE_URL=
+WEB_URL=
+JWT_SECRET_KEY=""
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
